src/chapter_3/snapshots/fatal_creator__chapter_3__subabilities__test__gender_modifiers_charisma@charisma-2.snap
---
source: src/chapter_3/subabilities.rs
expression: new
---
Charisma(
  facial: 103,
  vocal: 100,
  kinetic: 100,
  rhetorical: 100,
)
