src/chapter_3/snapshots/fatal_creator__chapter_3__subabilities__test__gender_modifiers_charisma@charisma.snap
---
source: src/chapter_3/subabilities.rs
expression: new
---
Charisma(
  facial: 97,
  vocal: 100,
  kinetic: 100,
  rhetorical: 100,
)
