src/chapter_3/snapshots/fatal_creator__chapter_3__subabilities__test__gender_modifiers_dexterity@dexterity.snap
---
source: src/chapter_3/subabilities.rs
expression: new
---
Dexterity(
  hand_eye_coordination: 100,
  agility: 100,
  reaction_speed: 100,
  enunciation: 100,
)
