src/chapter_3/snapshots/fatal_creator__chapter_3__subabilities__test__gender_modifiers_intelligence@intelligence-2.snap
---
source: src/chapter_3/subabilities.rs
expression: new
---
Intelligence(
  language: 102,
  math: 97,
  analytic: 97,
  spatial: 100,
)
