src/chapter_3/snapshots/fatal_creator__chapter_3__subabilities__test__gender_modifiers_intelligence@intelligence.snap
---
source: src/chapter_3/subabilities.rs
expression: new
---
Intelligence(
  language: 98,
  math: 103,
  analytic: 103,
  spatial: 100,
)
