src/chapter_3/snapshots/fatal_creator__chapter_3__subabilities__test__gender_modifiers_physique@physique-2.snap
---
source: src/chapter_3/subabilities.rs
expression: new
---
Physique(
  physical_fitness: 95,
  strength: 70,
  bodily_attractiveness: 103,
  health: 100,
)
