src/chapter_3/snapshots/fatal_creator__chapter_3__subabilities__test__gender_modifiers_physique@physique.snap
---
source: src/chapter_3/subabilities.rs
expression: new
---
Physique(
  physical_fitness: 105,
  strength: 130,
  bodily_attractiveness: 97,
  health: 100,
)
