src/chapter_3/snapshots/fatal_creator__chapter_3__subabilities__test__gender_modifiers_wisdom@wisdom.snap
---
source: src/chapter_3/subabilities.rs
expression: new
---
Wisdom(
  drive: 102,
  intuition: 95,
  common_sense: 100,
  reflection: 96,
)
